--- a/gzpn-spc-csl/src/main/resources/i18n/captions_en.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions_en.properties
@@ -101,41 +101,18 @@ createDocSettingsWindow.projectTree.caption  = Grouping settings
 createDocSettingsWindow.tabSheet.columns.cap = Columns
 createDocSettingsWindow.tabSheet.headers.cap = Table headers
 
-createdoc.CreateDocLayout.addWorksetButton.desc                         = Add workset..
-createdoc.CreateDocLayout.delWorksetButton.desc                         = Remove workset..
-createdoc.CreateDocLayout.downloadWorksetButton.desc                    = Download Excel Work sets
-createdoc.CreateDocLayout.projectTreeCaption                            = Project tree
-createdoc.CreateDocLayout.userLayoutSettings.desc                       = User Layout settings
-createdoc.CreateDocLayout.worksetFilterField.placeholder                = Search..
-createdoc.CreateDocLayout.worksetFilterSettingsButton.desc              = Filter settings
-createdoc.CreateDocLayout.worksetGrid.columns.changedate                = Change date
-createdoc.CreateDocLayout.worksetGrid.columns.code                      = Workset Code
-createdoc.CreateDocLayout.worksetGrid.columns.createdate                = Create date
-createdoc.CreateDocLayout.worksetGrid.columns.id                        = ID
-createdoc.CreateDocLayout.worksetGrid.columns.name                      = Name
-createdoc.CreateDocLayout.worksetGrid.columns.pir                       = PIR
-createdoc.CreateDocLayout.worksetGrid.columns.planobj                   = Plan object
-createdoc.CreateDocLayout.worksetGrid.columns.smr                       = SMR
-createdoc.CreateDocLayout.worksetGrid.columns.ver                       = Version
-createdoc.CreateDocSettingsWindow.columnsGrid.columns.addToGroup        = Move to Tree
-createdoc.CreateDocSettingsWindow.columnsGrid.columns.entity            = Entity
-createdoc.CreateDocSettingsWindow.columnsGrid.columns.id                = Field
-createdoc.CreateDocSettingsWindow.columnsGrid.columns.mergedHeadColumns = Header
-createdoc.CreateDocSettingsWindow.columnsGrid.columns.visible           = Visibility
-createdoc.WorkSetDocumentation.addDocumentButton.desc                   = Add document..
-createdoc.WorkSetDocumentation.delDocumentButton.desc                   = Remove document..
-createdoc.WorkSetDocumentation.documentFilterField.placeholder          = Search document...
-createdoc.WorkSetDocumentation.documentFilterSettingsButton.desc        = Filter settings
-createdoc.WorkSetDocumentation.documentGrid.columns.changedate          = Change Date
-createdoc.WorkSetDocumentation.documentGrid.columns.code                = Code
-createdoc.WorkSetDocumentation.documentGrid.columns.createdate          = Create Date
-createdoc.WorkSetDocumentation.documentGrid.columns.id                  = Id
-createdoc.WorkSetDocumentation.documentGrid.columns.name                = Name
-createdoc.WorkSetDocumentation.documentGrid.columns.type                = Type
-createdoc.WorkSetDocumentation.documentGrid.columns.version             = Version
-createdoc.WorkSetDocumentation.documentGrid.columns.work                = Work
-createdoc.WorkSetDocumentation.documentGrid.columns.workset             = Work set
-createdoc.WorkSetDocumentation.downloadDocumentsButton.desc             = Download Excel Documents
+createdoc.CreateDocLayout.addWorksetButton.desc                  = Add workset..
+createdoc.CreateDocLayout.delWorksetButton.desc                  = Remove workset..
+createdoc.CreateDocLayout.downloadWorksetButton.desc             = Download Excel Work sets
+createdoc.CreateDocLayout.projectTreeCaption                     = Project tree
+createdoc.CreateDocLayout.userLayoutSettings.desc                = User Layout settings
+createdoc.CreateDocLayout.worksetFilterField.placeholder         = Search..
+createdoc.CreateDocLayout.worksetFilterSettingsButton.desc       = Filter settings
+createdoc.WorkSetDocumentation.addDocumentButton.desc            = Add document..
+createdoc.WorkSetDocumentation.delDocumentButton.desc            = Remove document..
+createdoc.WorkSetDocumentation.documentFilterField.placeholder   = Search document...
+createdoc.WorkSetDocumentation.documentFilterSettingsButton.desc = Filter settings
+createdoc.WorkSetDocumentation.downloadDocumentsButton.desc      = Download Excel Documents
 
 logon.button.signin  = Sign in
 logon.label.login    = Login
@@ -161,5 +138,9 @@ ru.gzpn.spc.csl.model.enums.WorkType.smr                  = SMR
 sessionExpired.button.reenter = Reenter
 sessionExpired.label.title    = Your session has expired
 
-settings.UISettingsWindow.cancelButton.cap = Close
-settings.UISettingsWindow.saveButton.cap   = Save and close
+settings.UISettingsWindow.cancelButton.cap     = Close
+settings.UISettingsWindow.saveButton.cap       = Save and close
+settings.columnsGrid.columns.entity            = Entity
+settings.columnsGrid.columns.id                = ID
+settings.columnsGrid.columns.mergedHeadColumns = To header
+settings.columnsGrid.columns.visible           = Visibility
