--- a/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
@@ -101,41 +101,18 @@ createDocSettingsWindow.projectTree.caption  = \u041D\u0430\u0441\u0442\u0440\u0
 createDocSettingsWindow.tabSheet.columns.cap = \u0421\u0442\u043E\u043B\u0431\u0446\u044B
 createDocSettingsWindow.tabSheet.headers.cap = \u0417\u0430\u0433\u043E\u043B\u043E\u0432\u043A\u0438 \u0441\u0442\u043E\u043B\u0431\u0446\u043E\u0432
 
-createdoc.CreateDocLayout.addWorksetButton.desc                         = \u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u043A\u043E\u043C\u043F\u043B\u0435\u043A\u0442
-createdoc.CreateDocLayout.delWorksetButton.desc                         = \u0423\u0434\u0430\u043B\u0438\u0442\u044C \u043A\u043E\u043C\u043F\u043B\u0435\u043A\u0442
-createdoc.CreateDocLayout.downloadWorksetButton.desc                    = \u041E\u0442\u043A\u0440\u044B\u0442\u044C \u0432 Excel 
-createdoc.CreateDocLayout.projectTreeCaption                            = \u0414\u0435\u0440\u0435\u0432\u043E \u043F\u0440\u043E\u0435\u043A\u0442\u043E\u0432
-createdoc.CreateDocLayout.userLayoutSettings.desc                       = \u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044C\u0441\u043A\u0438\u0435 \u043D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0438 \u043E\u0442\u043E\u0431\u0440\u0430\u0436\u0435\u043D\u0438\u044F
-createdoc.CreateDocLayout.worksetFilterField.placeholder                = \u0424\u0438\u043B\u044C\u0442\u0440 \u043A\u043E\u043C\u043F\u043B\u0435\u043A\u0442\u043E\u0432...
-createdoc.CreateDocLayout.worksetFilterSettingsButton.desc              = \u041D\u0430\u0439\u0441\u0442\u0440\u043E\u0439\u043A\u0438 \u0444\u0438\u043B\u044C\u0442\u0440\u0430
-createdoc.CreateDocLayout.worksetGrid.columns.changedate                = \u0414\u0430\u0442\u0430 \u0438\u0437\u043C\u0435\u043D\u0435\u043D\u0438\u044F
-createdoc.CreateDocLayout.worksetGrid.columns.code                      = \u041A\u043E\u0434 \u043A\u043E\u043C\u043F\u043B\u0435\u043A\u0442\u0430
-createdoc.CreateDocLayout.worksetGrid.columns.createdate                = \u0414\u0430\u0442\u0430 \u0441\u043E\u0437\u0434\u0430\u043D\u0438\u044F
-createdoc.CreateDocLayout.worksetGrid.columns.id                        = ID
-createdoc.CreateDocLayout.worksetGrid.columns.name                      = \u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435
-createdoc.CreateDocLayout.worksetGrid.columns.pir                       = \u041F\u0418\u0420
-createdoc.CreateDocLayout.worksetGrid.columns.planobj                   = \u041E\u0431\u044A\u0435\u043A\u0442 \u0433\u0435\u043D\u043F\u043B\u0430\u043D\u0430
-createdoc.CreateDocLayout.worksetGrid.columns.smr                       = \u0421\u041C\u0420
-createdoc.CreateDocLayout.worksetGrid.columns.ver                       = \u2116 \u0438\u0437\u043C\u0435\u043D\u0435\u0438\u044F
-createdoc.CreateDocSettingsWindow.columnsGrid.columns.addToGroup        = \u041F\u0435\u0440\u0435\u043C\u0435\u0441\u0442\u0438\u0442\u044C
-createdoc.CreateDocSettingsWindow.columnsGrid.columns.entity            = \u0421\u0443\u0449\u043D\u043E\u0441\u0442\u044C
-createdoc.CreateDocSettingsWindow.columnsGrid.columns.id                = \u041F\u043E\u043B\u0435
-createdoc.CreateDocSettingsWindow.columnsGrid.columns.mergedHeadColumns = \u0417\u0430\u0433\u043E\u043B\u043E\u0432\u043E\u043A
-createdoc.CreateDocSettingsWindow.columnsGrid.columns.visible           = \u0412\u0438\u0434\u0438\u043C\u043E\u0441\u0442\u044C
-createdoc.WorkSetDocumentation.addDocumentButton.desc                   = \u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442..
-createdoc.WorkSetDocumentation.delDocumentButton.desc                   = \u0423\u0434\u0430\u043B\u0438\u0442\u044C \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442..
-createdoc.WorkSetDocumentation.documentFilterField.placeholder          = \u0424\u0438\u043B\u044C\u0442\u0440 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u043E\u0432...
-createdoc.WorkSetDocumentation.documentFilterSettingsButton.desc        = \u041D\u0430\u0439\u0441\u0442\u0440\u043E\u0439\u043A\u0438 \u0444\u0438\u043B\u044C\u0442\u0440\u0430
-createdoc.WorkSetDocumentation.documentGrid.columns.changedate          = \u0414\u0430\u0442\u0430 \u0438\u0437\u043C\u0435\u043D\u0435\u043D\u0438\u044F
-createdoc.WorkSetDocumentation.documentGrid.columns.code                = \u041A\u043E\u0434
-createdoc.WorkSetDocumentation.documentGrid.columns.createdate          = \u0414\u0430\u0442\u0430 \u0441\u043E\u0437\u0434\u0430\u043D\u0438\u044F
-createdoc.WorkSetDocumentation.documentGrid.columns.id                  = \u0418\u0434
-createdoc.WorkSetDocumentation.documentGrid.columns.name                = \u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435
-createdoc.WorkSetDocumentation.documentGrid.columns.type                = \u0422\u0438\u043F
-createdoc.WorkSetDocumentation.documentGrid.columns.version             = \u0412\u0435\u0440\u0441\u0438\u044F
-createdoc.WorkSetDocumentation.documentGrid.columns.work                = \u0420\u0430\u0431\u043E\u0442\u0430
-createdoc.WorkSetDocumentation.documentGrid.columns.workset             = \u041A\u043E\u043C\u043F\u043B\u0435\u043A\u0442
-createdoc.WorkSetDocumentation.downloadDocumentsButton.desc             = \u041E\u0442\u043A\u0440\u044B\u0442\u044C \u0432 Excel
+createdoc.CreateDocLayout.addWorksetButton.desc                  = \u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u043A\u043E\u043C\u043F\u043B\u0435\u043A\u0442
+createdoc.CreateDocLayout.delWorksetButton.desc                  = \u0423\u0434\u0430\u043B\u0438\u0442\u044C \u043A\u043E\u043C\u043F\u043B\u0435\u043A\u0442
+createdoc.CreateDocLayout.downloadWorksetButton.desc             = \u041E\u0442\u043A\u0440\u044B\u0442\u044C \u0432 Excel 
+createdoc.CreateDocLayout.projectTreeCaption                     = \u0414\u0435\u0440\u0435\u0432\u043E \u043F\u0440\u043E\u0435\u043A\u0442\u043E\u0432
+createdoc.CreateDocLayout.userLayoutSettings.desc                = \u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044C\u0441\u043A\u0438\u0435 \u043D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0438 \u043E\u0442\u043E\u0431\u0440\u0430\u0436\u0435\u043D\u0438\u044F
+createdoc.CreateDocLayout.worksetFilterField.placeholder         = \u0424\u0438\u043B\u044C\u0442\u0440 \u043A\u043E\u043C\u043F\u043B\u0435\u043A\u0442\u043E\u0432...
+createdoc.CreateDocLayout.worksetFilterSettingsButton.desc       = \u041D\u0430\u0439\u0441\u0442\u0440\u043E\u0439\u043A\u0438 \u0444\u0438\u043B\u044C\u0442\u0440\u0430
+createdoc.WorkSetDocumentation.addDocumentButton.desc            = \u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442..
+createdoc.WorkSetDocumentation.delDocumentButton.desc            = \u0423\u0434\u0430\u043B\u0438\u0442\u044C \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442..
+createdoc.WorkSetDocumentation.documentFilterField.placeholder   = \u0424\u0438\u043B\u044C\u0442\u0440 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u043E\u0432...
+createdoc.WorkSetDocumentation.documentFilterSettingsButton.desc = \u041D\u0430\u0439\u0441\u0442\u0440\u043E\u0439\u043A\u0438 \u0444\u0438\u043B\u044C\u0442\u0440\u0430
+createdoc.WorkSetDocumentation.downloadDocumentsButton.desc      = \u041E\u0442\u043A\u0440\u044B\u0442\u044C \u0432 Excel
 
 logon.button.signin  = \u0412\u043E\u0439\u0442\u0438
 logon.label.login    = \u041B\u043E\u0433\u0438\u043D
@@ -161,5 +138,9 @@ ru.gzpn.spc.csl.model.enums.WorkType.smr                  = \u0421\u041C\u0420
 sessionExpired.button.reenter = \u0412\u043E\u0441\u0441\u0442\u0430\u043D\u043E\u0432\u0438\u0442\u044C
 sessionExpired.label.title    = \u0421\u0435\u0441\u0441\u0438\u044F \u0441\u043E\u0435\u0434\u0438\u043D\u0435\u043D\u0438\u044F \u0437\u0430\u0432\u0435\u0440\u0448\u0435\u043D\u0430
 
-settings.UISettingsWindow.cancelButton.cap = \u0417\u0430\u043A\u0440\u044B\u0442\u044C
-settings.UISettingsWindow.saveButton.cap   = \u0421\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C \u0438 \u0437\u0430\u043A\u0440\u044B\u0442\u044C
+settings.UISettingsWindow.cancelButton.cap     = \u0417\u0430\u043A\u0440\u044B\u0442\u044C
+settings.UISettingsWindow.saveButton.cap       = \u0421\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C \u0438 \u0437\u0430\u043A\u0440\u044B\u0442\u044C
+settings.columnsGrid.columns.entity            = \u0421\u0443\u0449\u043D\u043E\u0441\u0442\u044C
+settings.columnsGrid.columns.id                = \u0418\u0434. \u043F\u043E\u043B\u044F
+settings.columnsGrid.columns.mergedHeadColumns = \u0412 \u0437\u0430\u0433\u043E\u043B\u043E\u0432\u043E\u043A
+settings.columnsGrid.columns.visible           = \u0412\u0438\u0434\u0438\u043C\u043E\u0441\u0442\u044C
