--- a/gzpn-spc-csl/src/main/resources/i18n/captions.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions.properties
@@ -1,38 +1,47 @@
 
-Entities.BaseEntity.changeDate = Change date
-Entities.BaseEntity.createDate = Create date
-Entities.BaseEntity.id         = ID
-Entities.BaseEntity.version    = Version
-Entities.CProject              = Capital Project
-Entities.CProject.code         = Code
-Entities.CProject.name         = Name
-Entities.Contract              = Contract
-Entities.Document              = Document
-Entities.Document.code         = Code
-Entities.Document.name         = Name
-Entities.Document.type         = Type
-Entities.EstimateCalculation   = Estimate Calculation
-Entities.EstimateCost          = Estimate Cost
-Entities.EstimateHead          = Estimate Head
-Entities.HProject              = Heavy Project
-Entities.HProject.code         = Code
-Entities.HProject.name         = Name
-Entities.LocalEstimate         = Local Estimate
-Entities.Milestone             = Milestone
-Entities.ObjectEstimate        = Object Estimate
-Entities.Phase                 = Phase
-Entities.PlanObject            = Plan Object
-Entities.PlanObject.code       = Code
-Entities.PlanObject.name       = Name
-Entities.Stage                 = Stage
-Entities.Stage.name            = Name
-Entities.Work                  = Work
-Entities.WorkSet               = Work Set
-Entities.WorkSet.code          = Code
-Entities.WorkSet.name          = Name
-Entities.WorkSet.pir           = PIR
-Entities.WorkSet.planObject    = Plan Object
-Entities.WorkSet.smr           = SMR
+Entities.BaseEntity.changeDate          = Change date
+Entities.BaseEntity.createDate          = Create date
+Entities.BaseEntity.id                  = ID
+Entities.BaseEntity.version             = Version
+Entities.CProject                       = Capital Project
+Entities.CProject.code                  = Code
+Entities.CProject.name                  = Name
+Entities.Contract                       = Contract
+Entities.Contract.code                  = Code
+Entities.Contract.createDate            = Create date
+Entities.Contract.customerName          = Customer
+Entities.Contract.executorName          = Executor
+Entities.Document                       = Document
+Entities.Document.code                  = Code
+Entities.Document.name                  = Name
+Entities.Document.type                  = Type
+Entities.EstimateCalculation            = Estimate Calculation
+Entities.EstimateCalculation.code       = Code
+Entities.EstimateCalculation.cproject   = Code project
+Entities.EstimateCalculation.createDate = Create date
+Entities.EstimateCalculation.handler    = Handler
+Entities.EstimateCalculation.name       = Name
+Entities.EstimateCost                   = Estimate Cost
+Entities.EstimateHead                   = Estimate Head
+Entities.HProject                       = Heavy Project
+Entities.HProject.code                  = Code
+Entities.HProject.name                  = Name
+Entities.LocalEstimate                  = Local Estimate
+Entities.Milestone                      = Milestone
+Entities.ObjectEstimate                 = Object Estimate
+Entities.Phase                          = Phase
+Entities.PlanObject                     = Plan Object
+Entities.PlanObject.code                = Code
+Entities.PlanObject.name                = Name
+Entities.Stage                          = Stage
+Entities.Stage.name                     = Name
+Entities.Work                           = Work
+Entities.WorkSet                        = Work Set
+Entities.WorkSet.code                   = Code
+Entities.WorkSet.name                   = Name
+Entities.WorkSet.pir                    = PIR
+Entities.WorkSet.planObject             = Plan Object
+Entities.WorkSet.smr                    = SMR
 
 ItemCreatingWindow.addButton.cap   = Save and close
 ItemCreatingWindow.closeButton.cap = Cancel
