--- a/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
@@ -1,38 +1,47 @@
 
-Entities.BaseEntity.changeDate = \u0414\u0430\u0442\u0430 \u0438\u0437\u043C.
-Entities.BaseEntity.createDate = \u0414\u0430\u0442\u0430 \u0441\u043E\u0437\u0434\u0430\u043D\u0438\u044F
-Entities.BaseEntity.id         = \u0418\u0434.
-Entities.BaseEntity.version    = \u2116 \u0418\u0437\u043C\u0435\u043D.
-Entities.CProject              = \u041A\u0430\u043F\u0438\u0442\u0430\u043B\u044C\u043D\u044B\u0439 \u043F\u0440\u043E\u0435\u043A\u0442
-Entities.CProject.code         = \u041A\u043E\u0434
-Entities.CProject.name         = \u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435
-Entities.Contract              = \u0414\u043E\u0433\u043E\u0432\u043E\u0440
-Entities.Document              = \u0414\u043E\u043A\u0443\u043C\u0435\u043D\u0442
-Entities.Document.code         = \u041A\u043E\u0434
-Entities.Document.name         = \u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435
-Entities.Document.type         = \u0412\u0438\u0434
-Entities.EstimateCalculation   = \u0421\u043C\u0435\u0442\u043D\u044B\u0439 \u0440\u0430\u0441\u0447\u0435\u0442
-Entities.EstimateCost          = \u0421\u043C\u0435\u0442\u043D\u0430\u044F \u0441\u0442\u043E\u0438\u043C\u043E\u0441\u0442\u044C
-Entities.EstimateHead          = \u0413\u043B\u0430\u0432\u0430
-Entities.HProject              = \u041A\u0440\u0443\u043F\u043D\u044B\u0439 \u043F\u0440\u043E\u0435\u043A\u0442
-Entities.HProject.code         = \u041A\u043E\u0434
-Entities.HProject.name         = \u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435
-Entities.LocalEstimate         = \u041B\u043E\u043A\u0430\u043B\u044C\u043D\u0430\u044F \u0441\u043C\u0435\u0442\u0430
-Entities.Milestone             = \u042D\u0442\u0430\u043F
-Entities.ObjectEstimate        = \u041E\u0431\u044A\u0435\u043A\u0442\u043D\u0430\u044F \u0441\u043C\u0435\u0442\u0430
-Entities.Phase                 = \u0424\u0430\u0437\u0430
-Entities.PlanObject            = \u041E\u0431\u044A\u0435\u043A\u0442 \u0433\u0435\u043D\u043F\u043B\u0430\u043D\u0430
-Entities.PlanObject.code       = \u041A\u043E\u0434
-Entities.PlanObject.name       = \u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435
-Entities.Stage                 = \u0421\u0442\u0430\u0434\u0438\u044F
-Entities.Stage.name            = \u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435
-Entities.Work                  = \u0420\u0430\u0431\u043E\u0442\u0430
-Entities.WorkSet               = \u041A\u043E\u043C\u043F\u043B\u0435\u043A\u0442
-Entities.WorkSet.code          = \u041A\u043E\u0434
-Entities.WorkSet.name          = \u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435
-Entities.WorkSet.pir           = \u041F\u0418\u0420
-Entities.WorkSet.planObject    = \u041E\u0431\u044A\u0435\u043A\u0442 \u0433\u0435\u043D\u043F\u043B\u0430\u043D\u0430
-Entities.WorkSet.smr           = \u0421\u041C\u0420
+Entities.BaseEntity.changeDate          = \u0414\u0430\u0442\u0430 \u0438\u0437\u043C.
+Entities.BaseEntity.createDate          = \u0414\u0430\u0442\u0430 \u0441\u043E\u0437\u0434\u0430\u043D\u0438\u044F
+Entities.BaseEntity.id                  = \u0418\u0434.
+Entities.BaseEntity.version             = \u2116 \u0418\u0437\u043C\u0435\u043D.
+Entities.CProject                       = \u041A\u0430\u043F\u0438\u0442\u0430\u043B\u044C\u043D\u044B\u0439 \u043F\u0440\u043E\u0435\u043A\u0442
+Entities.CProject.code                  = \u041A\u043E\u0434
+Entities.CProject.name                  = \u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435
+Entities.Contract                       = \u0414\u043E\u0433\u043E\u0432\u043E\u0440
+Entities.Contract.code                  = \u041D\u043E\u043C\u0435\u0440 \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0430
+Entities.Contract.createDate            = \u0414\u0430\u0442\u0430 \u0441\u043E\u0437\u0434\u0430\u043D\u0438\u044F
+Entities.Contract.customerName          = \u0417\u0430\u043A\u0430\u0437\u0447\u0438\u043A
+Entities.Contract.executorName          = \u0418\u0441\u043F\u043E\u043B\u043D\u0438\u0442\u0435\u043B\u044C
+Entities.Document                       = \u0414\u043E\u043A\u0443\u043C\u0435\u043D\u0442
+Entities.Document.code                  = \u041A\u043E\u0434
+Entities.Document.name                  = \u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435
+Entities.Document.type                  = \u0412\u0438\u0434
+Entities.EstimateCalculation            = \u0421\u043C\u0435\u0442\u043D\u044B\u0439 \u0440\u0430\u0441\u0447\u0435\u0442
+Entities.EstimateCalculation.code       = \u041A\u043E\u0434 \u0441\u043C\u0435\u0442\u043D\u043E\u0433\u043E \u0440\u0430\u0441\u0447\u0435\u0442\u0430
+Entities.EstimateCalculation.cproject   = \u041A\u043E\u0434 \u043F\u0440\u043E\u0435\u043A\u0442\u0430
+Entities.EstimateCalculation.createDate = \u0414\u0430\u0442\u0430 \u0441\u043E\u0437\u0434\u0430\u043D\u0438\u044F
+Entities.EstimateCalculation.handler    = \u041E\u0431\u0440\u0430\u0431\u043E\u0442\u0447\u0438\u043A
+Entities.EstimateCalculation.name       = \u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435
+Entities.EstimateCost                   = \u0421\u043C\u0435\u0442\u043D\u0430\u044F \u0441\u0442\u043E\u0438\u043C\u043E\u0441\u0442\u044C
+Entities.EstimateHead                   = \u0413\u043B\u0430\u0432\u0430
+Entities.HProject                       = \u041A\u0440\u0443\u043F\u043D\u044B\u0439 \u043F\u0440\u043E\u0435\u043A\u0442
+Entities.HProject.code                  = \u041A\u043E\u0434
+Entities.HProject.name                  = \u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435
+Entities.LocalEstimate                  = \u041B\u043E\u043A\u0430\u043B\u044C\u043D\u0430\u044F \u0441\u043C\u0435\u0442\u0430
+Entities.Milestone                      = \u042D\u0442\u0430\u043F
+Entities.ObjectEstimate                 = \u041E\u0431\u044A\u0435\u043A\u0442\u043D\u0430\u044F \u0441\u043C\u0435\u0442\u0430
+Entities.Phase                          = \u0424\u0430\u0437\u0430
+Entities.PlanObject                     = \u041E\u0431\u044A\u0435\u043A\u0442 \u0433\u0435\u043D\u043F\u043B\u0430\u043D\u0430
+Entities.PlanObject.code                = \u041A\u043E\u0434
+Entities.PlanObject.name                = \u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435
+Entities.Stage                          = \u0421\u0442\u0430\u0434\u0438\u044F
+Entities.Stage.name                     = \u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435
+Entities.Work                           = \u0420\u0430\u0431\u043E\u0442\u0430
+Entities.WorkSet                        = \u041A\u043E\u043C\u043F\u043B\u0435\u043A\u0442
+Entities.WorkSet.code                   = \u041A\u043E\u0434
+Entities.WorkSet.name                   = \u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435
+Entities.WorkSet.pir                    = \u041F\u0418\u0420
+Entities.WorkSet.planObject             = \u041E\u0431\u044A\u0435\u043A\u0442 \u0433\u0435\u043D\u043F\u043B\u0430\u043D\u0430
+Entities.WorkSet.smr                    = \u0421\u041C\u0420
 
 ItemCreatingWindow.addButton.cap   = \u0421\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C \u0438 \u0437\u0430\u043A\u0440\u044B\u0442\u044C
 ItemCreatingWindow.closeButton.cap = \u0417\u0430\u043A\u0440\u044B\u0442\u044C
