--- a/gzpn-spc-csl/src/main/resources/i18n/captions_en.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions_en.properties
@@ -47,7 +47,7 @@ ItemCreatingWindow.addButton.cap   = Save and close
 ItemCreatingWindow.closeButton.cap = Cancel
 
 RegisterComponent.createItemButton.cap = Create
-RegisterComponent.filter.placeholder   = \u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u0444\u0438\u043B\u044C\u0442\u0440...
+RegisterComponent.filter.placeholder   = Search...
 RegisterComponent.openItemButton.cap   = Open
 
 adminView.ConfirmDialog.deleteGroup.info     = Are you sure want to delete the group?
